// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ccorrectly render ExpenseSummaray with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should ccorrectly render ExpenseSummaray with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $235,123,421.34
  </h1>
</div>
`;
